bug collapse

--- a/src/styles/sass/collapse.scss
+++ b/src/styles/sass/collapse.scss
@@ -9,6 +9,7 @@
   width: 100%;
 }
 .collapse {
+  border: 3px solid ;
   border-radius: 10px;
   background-color: #f7f7f7;
   width: 45%;
